Make the 3-col layout responsive + misc css fixes
- Move left, right, center col styles to the layout style sheet since they use the same variables and styles are dependent on one another
- Fix the full-page container style used in the 3-col layout. Add a full-width container as well.
- Make the 3-col layout work on smaller screens
- Remove unused CSS styles
- Fix issue where the controls for the globe viz were overlapping the nav on mobile
- Style the right-side nav
- Tweak some misc styles

Relates to  #103, #17, #28, #67, #93

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,88 +1,74 @@
 html {
   font-size: 16px;
 }
+
 *,
 *:after,
 *:before {
   box-sizing: inherit;
 }
+
 body {
-  box-sizing     : border-box;
+  box-sizing: border-box;
   margin: 0;
-  min-height     : 100vh;
-  line-height: 1.43;
+  min-height: 100vh;
+  max-width: 100vw;
+  line-height: 1.45;
   scroll-behavior: smooth;
-  overflow-y     : scroll;
-  max-width      : 100vw;
-  font-family: $font-family;
+  overflow-y: scroll;
   background-color: $body-color;
+  color: $text-color;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
+  font-family: $font-family;
+  letter-spacing: 0.02em;
+}
+
+::selection {
+  background: $text-color-dark;
+  color: white;
 }
 
 p {
-  line-height: 2rem;
-  font-size: 1rem;
+  line-height: 2;
   text-align: justify;
-  letter-spacing: 0.02em;
-  -webkit-font-smoothing: antialiased;
-  color: #333;
 }
 
 img {
   max-width: 100%;
 }
 
-::selection {
-  background: lighten($color: $text-color, $amount: 10);
-  color: white;
-}
-
 a {
   color: $accent-color;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 a:hover {
   color: $highlight-color;
 }
 
-h4{
-  transition: .2s ease;
-}
-a h4{
-  &:hover{
-    color: $text-color;
-  }
-}
-
-.section-title {
-  margin-bottom: 30px;
-}
-
-.bg-cover {
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-}
-
-.border-primary {
-  border-color: $border-color !important;
-}
-
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   line-height: 1.1;
   color: $text-color-dark;
-  letter-spacing: .03em;
+  letter-spacing: 0.03em;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-weight: 800;
   text-transform: uppercase;
 }
 
-h5, h6 {
+h5,
+h6 {
   font-weight: 700;
 }
 
@@ -107,7 +93,7 @@ blockquote {
     padding-top: 1rem;
     border-top: 1px solid $border-color;
 
-    &:first-of-type{
+    &:first-of-type {
       border-top: none;
       margin-top: 0;
     }
@@ -116,19 +102,18 @@ blockquote {
 
 .two-columns {
   display: grid;
-  
+
   // Only use a two-column layout on desktop
   @include desktop {
     grid-template-columns: 1fr 1fr;
     gap: 5rem;
   }
 
-  &__centered-column{
+  &__centered-column {
     display: grid;
     justify-items: center;
   }
 }
-
 
 .card-section {
   width: auto;
@@ -141,7 +126,7 @@ blockquote {
   --size: 6.2rem;
   --color: #{$text-color-dark};
   line-height: var(--size);
-  font-size: calc( var(--size) * 0.4 );
+  font-size: calc(var(--size) * 0.4);
   color: var(--color);
   text-align: center;
   font-weight: 800;
@@ -151,7 +136,7 @@ blockquote {
     --size: 2.2rem;
   }
 
-  &--circle{
+  &--circle {
     width: var(--size);
     height: var(--size);
     border-radius: 50%;
@@ -162,5 +147,4 @@ blockquote {
   &--inline {
     display: inline-block;
   }
-
 }
